--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,3 +10,5 @@
     <h1>YelpCamp</h1>
 </body>
 </html>
+
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum molestiae asperiores suscipit cumque porro dolore dignissimos et necessitatibus qui repudiandae neque at, odit amet cum veritatis quis rerum quos illum.
