--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,16 +1,9 @@
 <% layout('layouts/boilerplate') %>
-<h1>Register</h1>
-<form action="/register" class="validated-form" novalidate method="POST">
+<h1>Login</h1>
+<form action="/login" class="validated-form" novalidate method="POST">
     <div class='mb-3'>
         <label class="form-label" for="username">Username</label>
         <input class="form-control" type="text" id="username" name="username" required>
-        <div class="valid-feedback">
-            Looks good!
-        </div>
-    </div>
-    <div class='mb-3'>
-        <label class="form-label" for="email">Email</label>
-        <input class="form-control" type="text" id="email" name="email" required>
         <div class="valid-feedback">
             Looks good!
         </div>
@@ -22,5 +15,5 @@
             Looks good!
         </div>
     </div>
-    <button class="btn btn-success">Register</button>
+    <button class="btn btn-success">Login</button>
 </form>
