--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,10 +1,15 @@
 <% layout('layouts/boilerplate') %>
+<div id="map" style="width: 100%; height: 500px"></div>
 <h1>All Campgrounds</h1>
 <% for (let campground of campgrounds) { %> 
     <div class="card" mb-3>
         <div class="row">
             <div class="col-md-4">
+                <% if(campground.images.length) { %>
                 <img src="<%=campground.images[0].url%>" alt="" class="img-fluid">
+                <% }else { %>
+                <img src="https://source.unsplash.com/featured/?{landscape}" alt="" class="img-fluid">
+                <% } %>
             </div>
             <div class="col-md-8">
                 <div class="card-body">
@@ -19,3 +24,8 @@
         </div>
     </div>
 <% } %>
+<script>
+    const mapToken = '<%- process.env.MAPBOX_TOKEN %>';
+    const campgrounds = {features: <%- JSON.stringify(campgrounds) %> };
+</script>
+<script src="/javascripts/clusterMap.js"></script>
