--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,12 +9,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="/stylesheets/home.css">
 </head>
-<body class="d-flex h-100 text-center text-white bg-dark">
+
+<body class="d-flex text-center text-white bg-dark">
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
         <header class="mb-auto">
             <div>
-                <h3 class="flat-md-left mb-0">YelpCamp</h3>
-                <nav class="nav nav-masthead justify-content-center float-md-right">
+                <h3 class="float-start mb-0">YelpCamp</h3>
+                <nav class="nav nav-masthead justify-content-center float-end">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                     <a class="nav-link" href="/campgrounds">Campgrounds</a>
                     <% if(!currentUser) { %>
@@ -25,7 +27,14 @@
                 </nav>
             </div>
         </header>
-
+        <main class="px-3">
+            <h1>YelpCamp</h1>
+            <p class="lead">Welcome to YelpCamp!<br>Jump right in and explore all the campgrounds.<br>Feel free to share some of your won reviews with others!</p>
+            <a href="/campgrounds" class="btn btn-lg btn-secondary font-weight-bold">View Campgrounds</a>
+        </main>
+        <footer class="mt-auto text-white-50">
+            <p>&copy; 2021 YelpCamp</p>
+        </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.min.js"></script>
