--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,7 +1,9 @@
 <% layout('layouts/boilerplate') %>
 <div class="row">
     <h1 class="text-center">New Campground</h1>
-    <div class="col-6 offset-3">
+    <div class="col-md-6 offset-md-3">
+        <div class="card shadow">
+            <div class="card-body">
         <form action="/campgrounds" method="POST" class="validated-form" novalidate enctype="multipart/form-data">
             <div class='mb-3'>
                 <label class="form-label" for="title">Title</label>
@@ -53,7 +55,9 @@
             <div class='mb-3'>
                 <button class="btn btn-success">Add Campground</button>
             </div>
-            <a href="/campgrounds">All Campgrounds</a>
+            <a href="/campgrounds">Back to All Campgrounds</a>
         </form>
+            </div>
+        </div> 
     </div>
 </div>
